--------
v2.29.18
--------




--------
v2.29.17
--------

[mjr] Fix SORT and THREAD commands when UTF8=ACCEPT.
[mjr] Provide SASL PLAIN authentication as another user (Marco Favero
      <m.faverof@gmail.com>, PR #7).
[jan] Fix warning with PHP 7.3 (Eloy Lafuente (stronk7) <stronk7@moodle.org>,
      PR 6).


--------
v2.29.16
--------

[mjr] Allow searching by DateTime as well as Date (PR #3, Robin Appelman
      <robin@icewind.nl>).
[mjr] Fix corruption of search terms due to sticky reference (PR #2).
[mjr] Fix retrying FETCH after an UNKNOWN-CTE error in certain cases (PR #1,
      stefanolaf).
[mjr] Fix fatal error in dealing with certain exceptions.


--------
v2.29.15
--------

[jan] Fix expunging cache entries of a certain lifetime from the DB backend.


--------
v2.29.14
--------

[jan] Fix check if QRESYNC is enabled in vanished() (i.badamshin
      <i.badamshin@i-infinite.net>).


--------
v2.29.13
--------

[jan] Add Turkish translation (İTÜ BİDB <sistemdestek@itu.edu.tr>).


--------
v2.29.12
--------

[mjr] Fix command syntax for CREATE-SPECIAL-USE support.


--------
v2.29.11
--------

[mjr] Fix failed connections when using unix sockets (Thomas Jarosch
      <thomas.jarosch@intra2net.com>).


--------
v2.29.10
--------

[jan] Fix parsing GETACL responses from RFC 4314 capable IMAP servers (Bug
      #14466).


-------
v2.29.9
-------

[jan] Optimize deleting or moving a large number of messages.


-------
v2.29.8
-------

[jan] Avoid notice with Horde_Mongo on PHP 7.
[mjr] Catch incorrectly localized Date headers.


-------
v2.29.7
-------

[mjr] Add sanity check for malformed offset in Date header (Bug #14381).
[mjr] Fix fatal error in certain cases when performing a BODY[HEADER.FIELDS]
      query.


-------
v2.29.6
-------

[jan] Add Greek translation (Limperis Antonis <limperis@cti.gr>).


-------
v2.29.5
-------

[jan] Don't try LOGIN authentication over secure connections if explicitly
      disabled.
[jan] Mark PHP 7 as supported.