@@ -9,7 +9,7 @@
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
   notes: |+
-    
+    [mjr] Fix LIST-STATUS parsing when using wildcards (Bug #14937, mariusz.goch@spacja.com).
 2.29.17:
   api: 2.29.0
   state:
@@ -20,7 +20,6 @@
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
   notes: |
-    [mjr] Fix LIST-STATUS parsing when using wildcards (Bug #14937, mariusz.goch@spacja.com).
     [mjr] Fix SORT and THREAD commands when UTF8=ACCEPT.
     [mjr] Provide SASL PLAIN authentication as another user (Marco Favero <m.faverof@gmail.com>, PR #7).
     [jan] Fix warning with PHP 7.3 (Eloy Lafuente (stronk7) <stronk7@moodle.org>, PR 6).
